Sort all `Cargo.toml` files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,26 @@
 [workspace]
 members = [
-        "linera-base",
-        "linera-chain",
-        "linera-core",
-        "linera-execution",
-        "linera-explorer",
-        "linera-indexer/example",
-        "linera-indexer/graphql-client",
-        "linera-indexer/lib",
-        "linera-indexer/plugins",
-        "linera-rpc",
-        "linera-sdk",
-        "linera-sdk-derive",
-        "linera-sdk/wasm-tests",
-        "linera-service",
-        "linera-service-graphql-client",
-        "linera-storage",
-        "linera-views",
-        "linera-views-derive",
-        "linera-witty",
-        "linera-witty-macros",
-        "linera-witty/test-modules",
+    "linera-base",
+    "linera-chain",
+    "linera-core",
+    "linera-execution",
+    "linera-explorer",
+    "linera-indexer/example",
+    "linera-indexer/graphql-client",
+    "linera-indexer/lib",
+    "linera-indexer/plugins",
+    "linera-rpc",
+    "linera-sdk",
+    "linera-sdk-derive",
+    "linera-sdk/wasm-tests",
+    "linera-service",
+    "linera-service-graphql-client",
+    "linera-storage",
+    "linera-views",
+    "linera-views-derive",
+    "linera-witty",
+    "linera-witty-macros",
+    "linera-witty/test-modules"
 ]
 exclude = ["examples", "scripts"]
 resolver = "2"
