--- a/examples/counter/Cargo.toml
+++ b/examples/counter/Cargo.toml
@@ -5,14 +5,14 @@ authors = ["Linera <contact@linera.io>"]
 edition = "2021"
 
 [dependencies]
-async-graphql = { workspace = true }
-async-trait = { workspace = true }
-bcs = { workspace = true }
-futures = { workspace = true }
-linera-sdk = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-thiserror = { workspace = true }
+async-graphql.workspace = true
+async-trait.workspace = true
+bcs.workspace = true
+futures.workspace = true
+linera-sdk.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
@@ -20,7 +20,7 @@ tokio = { workspace = true, features = ["rt", "sync"] }
 
 [dev-dependencies]
 linera-sdk = { workspace = true, features = ["test"] }
-webassembly-test = { workspace = true }
+webassembly-test.workspace = true
 
 [[bin]]
 name = "counter_contract"
