--- a/linera-chain/Cargo.toml
+++ b/linera-chain/Cargo.toml
@@ -14,20 +14,20 @@ edition = "2021"
 test = ["tokio/macros", "linera-base/test", "linera-execution/test"]
 
 [dependencies]
-async-graphql = { workspace = true }
-async-lock = { workspace = true }
-async-trait = { workspace = true }
-futures = { workspace = true }
-linera-base = { workspace = true }
-linera-execution = { workspace = true }
+async-graphql.workspace = true
+async-lock.workspace = true
+async-trait.workspace = true
+futures.workspace = true
+linera-base.workspace = true
+linera-execution.workspace = true
 linera-views = { workspace = true, features = ["metrics"] }
-prometheus = { workspace = true }
-rand_chacha = { workspace = true }
+prometheus.workspace = true
+rand_chacha.workspace = true
 rand_distr = { workspace = true, features = ["serde1"] }
-serde = { workspace = true }
-thiserror = { workspace = true }
-tokio = { workspace = true }
-tracing = { workspace = true }
+serde.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 linera-chain = { path = ".", features = ["test"] }
