--- a/examples/amm/Cargo.toml
+++ b/examples/amm/Cargo.toml
@@ -5,17 +5,17 @@ authors = ["Linera <contact@linera.io>"]
 edition = "2021"
 
 [dependencies]
-async-graphql = { workspace = true }
-async-trait = { workspace = true }
-bcs = { workspace = true }
-fungible = { workspace = true }
-linera-sdk = { workspace = true }
-matching-engine = { workspace = true }
-num-bigint = { workspace = true }
-num-traits = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-thiserror = { workspace = true }
+async-graphql.workspace = true
+async-trait.workspace = true
+bcs.workspace = true
+fungible.workspace = true
+linera-sdk.workspace = true
+matching-engine.workspace = true
+num-bigint.workspace = true
+num-traits.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
