--- a/examples/fungible/Cargo.toml
+++ b/examples/fungible/Cargo.toml
@@ -8,19 +8,19 @@ edition = "2021"
 test = []
 
 [dependencies]
-async-graphql = { workspace = true }
-async-trait = { workspace = true }
-bcs = { workspace = true }
-futures = { workspace = true }
-linera-sdk = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-thiserror = { workspace = true }
+async-graphql.workspace = true
+async-trait.workspace = true
+bcs.workspace = true
+futures.workspace = true
+linera-sdk.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 fungible = { workspace = true, features = ["test"] }
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
-tokio = { workspace = true }
+tokio.workspace = true
 
 [[bin]]
 name = "fungible_contract"
