--- a/examples/matching-engine/Cargo.toml
+++ b/examples/matching-engine/Cargo.toml
@@ -5,22 +5,22 @@ authors = ["Linera <contact@linera.io>"]
 edition = "2021"
 
 [dependencies]
-async-graphql = { workspace = true }
-async-trait = { workspace = true }
-bcs = { workspace = true }
-fungible = { workspace = true }
-linera-sdk = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-thiserror = { workspace = true }
+async-graphql.workspace = true
+async-trait.workspace = true
+bcs.workspace = true
+fungible.workspace = true
+linera-sdk.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 fungible = { workspace = true, features = ["test"] }
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
-tokio = { workspace = true }
+tokio.workspace = true
 
 [dev-dependencies]
-webassembly-test = { workspace = true }
+webassembly-test.workspace = true
 
 [[bin]]
 name = "matching_engine_contract"
