--- a/linera-indexer/example/Cargo.toml
+++ b/linera-indexer/example/Cargo.toml
@@ -21,25 +21,25 @@ wasmtime = ["linera-indexer-plugins/wasmtime"]
 test = ["linera-service/test"]
 
 [dependencies]
-linera-indexer = { workspace = true }
-linera-indexer-plugins = { workspace = true }
+linera-indexer.workspace = true
+linera-indexer-plugins.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 
 [dev-dependencies]
-anyhow = { workspace = true }
-async-graphql = { workspace = true }
-linera-base = { workspace = true }
-linera-indexer-graphql-client = { workspace = true }
+anyhow.workspace = true
+async-graphql.workspace = true
+linera-base.workspace = true
+linera-indexer-graphql-client.workspace = true
 linera-service = { workspace = true, features = ["rocksdb", "test"] }
-linera-service-graphql-client = { workspace = true }
-reqwest = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-tempfile = { workspace = true }
-test-case = { workspace = true }
+linera-service-graphql-client.workspace = true
+reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+tempfile.workspace = true
+test-case.workspace = true
 test-log = { workspace = true, features = ["trace"] }
-tracing = { workspace = true }
+tracing.workspace = true
 
 [[bin]]
 name = "linera-indexer"
