--- a/linera-indexer/lib/Cargo.toml
+++ b/linera-indexer/lib/Cargo.toml
@@ -18,24 +18,24 @@ aws = ["linera-views/aws", "linera-core/aws"]
 scylladb = ["linera-views/scylladb", "linera-core/scylladb"]
 
 [dependencies]
-async-graphql = { workspace = true }
-async-graphql-axum = { workspace = true }
-async-trait = { workspace = true }
+async-graphql.workspace = true
+async-graphql-axum.workspace = true
+async-trait.workspace = true
 async-tungstenite = { version = "0.22", features = ["tokio-runtime"] }
 axum = { workspace = true, features = ["ws", "headers"] }
-bcs = { workspace = true }
-clap = { workspace = true }
-futures = { workspace = true }
+bcs.workspace = true
+clap.workspace = true
+futures.workspace = true
 graphql-ws-client = { version = "0.5", features = ["client-graphql-client"] }
 graphql_client = { version = "0.13", features = [ "reqwest-rustls" ] }
 hyper = "0.14"
-linera-base = { workspace = true }
-linera-chain = { workspace = true }
-linera-core = { workspace = true }
-linera-service-graphql-client = { workspace = true }
-linera-views = { workspace = true }
-reqwest = { workspace = true }
-thiserror = { workspace = true }
+linera-base.workspace = true
+linera-chain.workspace = true
+linera-core.workspace = true
+linera-service-graphql-client.workspace = true
+linera-views.workspace = true
+reqwest.workspace = true
+thiserror.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 tower-http = { workspace = true, features = ["cors"] }
-tracing = { workspace = true }
+tracing.workspace = true
