--- a/linera-rpc/Cargo.toml
+++ b/linera-rpc/Cargo.toml
@@ -11,48 +11,54 @@ license = "Apache-2.0"
 edition = "2021"
 
 [features]
-test = ["linera-base/test", "linera-chain/test", "linera-core/test", "linera-execution/test", "linera-storage/test"]
+test = [
+    "linera-base/test",
+    "linera-chain/test",
+    "linera-core/test",
+    "linera-execution/test",
+    "linera-storage/test"
+]
 
 [dependencies]
-anyhow = { workspace = true }
-async-trait = { workspace = true }
-bincode = { workspace = true }
-bytes = { workspace = true }
-clap = { workspace = true }
-dashmap = { workspace = true }
-ed25519 = { workspace = true }
-ed25519-dalek = { workspace = true }
-futures = { workspace = true }
-http = { workspace = true }
-linera-base = { workspace = true }
-linera-chain = { workspace = true }
-linera-core = { workspace = true }
-linera-execution = { workspace = true }
-linera-storage = { workspace = true }
-linera-views = { workspace = true }
-prometheus = { workspace = true }
+anyhow.workspace = true
+async-trait.workspace = true
+bincode.workspace = true
+bytes.workspace = true
+clap.workspace = true
+dashmap.workspace = true
+ed25519.workspace = true
+ed25519-dalek.workspace = true
+futures.workspace = true
+http.workspace = true
+linera-base.workspace = true
+linera-chain.workspace = true
+linera-core.workspace = true
+linera-execution.workspace = true
+linera-storage.workspace = true
+linera-views.workspace = true
+prometheus.workspace = true
 proptest = { workspace = true, optional = true }
-prost = { workspace = true }
-rand = { workspace = true }
-serde = { workspace = true }
-thiserror = { workspace = true }
-tokio = { workspace = true }
+prost.workspace = true
+rand.workspace = true
+serde.workspace = true
+thiserror.workspace = true
+tokio.workspace = true
 tokio-util = { workspace = true, features = ["codec", "net"] }
-tonic = { workspace = true }
-tonic-health = { workspace = true }
-tower = { workspace = true }
-tracing = { workspace = true }
+tonic.workspace = true
+tonic-health.workspace = true
+tower.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 linera-rpc = { path = ".", features = ["test"] }
-proptest = { workspace = true }
-serde-reflection = { workspace = true }
-serde_yaml = { workspace = true }
-similar-asserts = { workspace = true }
-test-strategy = { workspace = true }
+proptest.workspace = true
+serde-reflection.workspace = true
+serde_yaml.workspace = true
+similar-asserts.workspace = true
+test-strategy.workspace = true
 
 [build-dependencies]
-tonic-build = { workspace = true }
+tonic-build.workspace = true
 
 [package.metadata.cargo-machete]
 ignored = ["proptest", "prost"]
