--- a/linera-sdk-derive/Cargo.toml
+++ b/linera-sdk-derive/Cargo.toml
@@ -14,5 +14,5 @@ proc-macro = true
 
 [dependencies]
 convert_case = "0.6.0"
-proc-macro2 = { workspace = true }
+proc-macro2.workspace = true
 syn = { workspace = true, features = ["full", "extra-traits"] }
