--- a/linera-sdk/wasm-tests/Cargo.toml
+++ b/linera-sdk/wasm-tests/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["Linera <contact@linera.io>"]
 edition = "2021"
 
 [dev-dependencies]
-async-trait = { workspace = true }
-bcs = { workspace = true }
-futures = { workspace = true }
+async-trait.workspace = true
+bcs.workspace = true
+futures.workspace = true
 linera-sdk = { workspace = true, features = ["test"] }
-linera-views = { workspace = true }
-log = { workspace = true }
-serde_json = { workspace = true }
-webassembly-test = { workspace = true }
+linera-views.workspace = true
+log.workspace = true
+serde_json.workspace = true
+webassembly-test.workspace = true
