--- a/linera-service-graphql-client/Cargo.toml
+++ b/linera-service-graphql-client/Cargo.toml
@@ -17,23 +17,23 @@ scylladb = ["linera-service/scylladb"]
 
 [dependencies]
 graphql_client = { version = "0.13", features = [ "reqwest-rustls" ] }
-linera-base = { workspace = true }
-reqwest = { workspace = true }
+linera-base.workspace = true
+reqwest.workspace = true
 serde = { workspace = true, features = [ "derive" ] }
-serde_json = { workspace = true }
-thiserror = { workspace = true }
+serde_json.workspace = true
+thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-linera-chain = { workspace = true }
-linera-core = { workspace = true }
-linera-execution = { workspace = true }
+linera-chain.workspace = true
+linera-core.workspace = true
+linera-execution.workspace = true
 
 [dev-dependencies]
-fungible = { workspace = true }
+fungible.workspace = true
 linera-service = { workspace = true, features = ["test"] }
-tempfile = { workspace = true }
-test-case = { workspace = true }
+tempfile.workspace = true
+test-case.workspace = true
 test-log = { workspace = true, features = ["trace"] }
 tokio = { workspace = true, features = ["full", "test-util"] }
-tracing = { workspace = true }
+tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["fmt"] }
