--- a/linera-views-derive/Cargo.toml
+++ b/linera-views-derive/Cargo.toml
@@ -12,10 +12,10 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = { workspace = true }
-quote = { workspace = true }
+proc-macro2.workspace = true
+quote.workspace = true
 syn = { workspace = true, features = ["full", "extra-traits"] }
 
 [dev-dependencies]
-insta = { workspace = true }
-prettyplease = { workspace = true }
+insta.workspace = true
+prettyplease.workspace = true
