--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -16,37 +16,44 @@ targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [features]
 test = ["anyhow", "tokio/macros", "tokio/parking_lot"]
-aws = ["aws-config", "aws-sdk-dynamodb", "aws-sdk-s3", "aws-smithy-http", "aws-smithy-types", "aws-types"]
+aws = [
+    "aws-config",
+    "aws-sdk-dynamodb",
+    "aws-sdk-s3",
+    "aws-smithy-http",
+    "aws-smithy-types",
+    "aws-types"
+]
 scylladb = ["scylla"]
 db_timings = []
 metrics = ["dep:hex"]
 
 [dependencies]
-anyhow = { workspace = true }
-async-graphql = { workspace = true }
-async-lock = { workspace = true }
-async-trait = { workspace = true }
-bcs = { workspace = true }
-convert_case = { workspace = true }
-futures = { workspace = true }
-generic-array = { workspace = true }
+anyhow.workspace = true
+async-graphql.workspace = true
+async-lock.workspace = true
+async-trait.workspace = true
+bcs.workspace = true
+convert_case.workspace = true
+futures.workspace = true
+generic-array.workspace = true
 hex = { workspace = true, optional = true }
-linera-base = { workspace = true }
-linera-views-derive = { workspace = true }
-linked-hash-map = { workspace = true }
-prometheus = { workspace = true }
-serde = { workspace = true }
-sha3 = { workspace = true }
-static_assertions = { workspace = true }
-tempfile = { workspace = true }
-thiserror = { workspace = true }
+linera-base.workspace = true
+linera-views-derive.workspace = true
+linked-hash-map.workspace = true
+prometheus.workspace = true
+serde.workspace = true
+sha3.workspace = true
+static_assertions.workspace = true
+tempfile.workspace = true
+thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { workspace = true, features = ["rt", "sync"] }
 anyhow = { workspace = true, optional = true }
-tracing = { workspace = true }
-http = { workspace = true }
-rand = { workspace = true }
+tracing.workspace = true
+http.workspace = true
+rand.workspace = true
 scylla = { workspace = true, optional = true }
 rocksdb = { workspace = true, optional = true }
 aws-config = { workspace = true, optional = true }
@@ -55,7 +62,7 @@ aws-sdk-s3 = { workspace = true, optional = true }
 aws-smithy-http = { workspace = true, optional = true }
 aws-smithy-types = { workspace = true, optional = true }
 aws-types = { workspace = true, optional = true }
-tokio-test = { workspace = true }
+tokio-test.workspace = true
 
 [dev-dependencies]
 linera-views = { path = ".", features = ["test"] }
