--- a/linera-witty-macros/Cargo.toml
+++ b/linera-witty-macros/Cargo.toml
@@ -19,8 +19,8 @@ wasmer = ["syn/extra-traits"]
 wasmtime = ["syn/extra-traits"]
 
 [dependencies]
-heck = { workspace = true }
-proc-macro-error = { workspace = true }
-proc-macro2 = { workspace = true }
-quote = { workspace = true }
+heck.workspace = true
+proc-macro-error.workspace = true
+proc-macro2.workspace = true
+quote.workspace = true
 syn = { workspace = true, features = ["full"] }
