Native Fungible Token App

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -158,6 +158,7 @@ linera-service-graphql-client = { version = "0.9.0", path = "./linera-service-gr
 counter = { path = "./examples/counter" }
 meta-counter = { path = "./examples/meta-counter" }
 fungible = { path = "./examples/fungible" }
+native-fungible = { path = "./examples/native-fungible" }
 crowd-funding = { path = "./examples/crowd-funding" }
 matching-engine = { path = "./examples/matching-engine" }
 social = { path = "./examples/social" }
