--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -96,6 +96,7 @@ linera-service = { path = ".", features = ["test"] }
 linera-storage = { workspace = true, features = ["test"] }
 linera-views = { workspace = true, features = ["test"] }
 matching-engine.workspace = true
+native-fungible.workspace = true
 proptest.workspace = true
 reqwest = { workspace = true, features = ["json"] }
 social.workspace = true
