Non Fungible Token App

--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -87,6 +87,7 @@ tracing-subscriber = { workspace = true, features = ["fmt"] }
 
 [dev-dependencies]
 amm.workspace = true
+base64.workspace = true
 counter.workspace = true
 crowd-funding.workspace = true
 fungible.workspace = true
@@ -100,6 +101,7 @@ linera-storage = { workspace = true, features = ["test"] }
 linera-views = { workspace = true, features = ["test"] }
 matching-engine.workspace = true
 native-fungible.workspace = true
+non-fungible.workspace = true
 proptest.workspace = true
 reqwest = { workspace = true, features = ["json"] }
 social.workspace = true
