Ignore `target` in `.dockerignore`

--- a/.dockerignore
+++ b/.dockerignore
@@ -13,8 +13,7 @@ npm-debug.log
 README-secret.md
 # github related files
 .github/
-scripts/target
-examples/target
+target/
 Dockerfile
 .dockerignore
 .gitignore
