Renaming the linera-shared-storage into linera-storage-service.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ members = [
     "linera-service",
     "linera-service-graphql-client",
     "linera-storage",
+    "linera-storage-service",
     "linera-views",
     "linera-views-derive",
-    "linera-shared-storage",
     "linera-witty",
     "linera-witty-macros",
     "linera-witty/test-modules",
