--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -62,9 +62,9 @@ jobs:
     - name: Compile the workspace with the default features (build)
       run: |
         cargo build --locked
-    - name: Run the shared storage used for the linera-shared-store tests
+    - name: Run the storage service used for the linera-storage-service tests
       run: |
-        ./target/debug/shared_store_server --storage memory --endpoint 127.0.0.1:8942 &
+        ./target/debug/storage_service_server --storage memory --endpoint 127.0.0.1:8942 &
     - name: Run all tests using the default features
       run: |
         cargo test --locked
