`linera-version`: serialize via `semver::Version`

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -289,11 +289,6 @@ Committee:
             TYPENAME: ValidatorState
     - policy:
         TYPENAME: ResourceControlPolicy
-CrateVersion:
-  STRUCT:
-    - major: U32
-    - minor: U32
-    - patch: U32
 CrossChainRequest:
   ENUM:
     0:
@@ -928,8 +923,7 @@ ValidatorState:
     - votes: U64
 VersionInfo:
   STRUCT:
-    - crate_version:
-        TYPENAME: CrateVersion
+    - crate_version: STR
     - git_commit: STR
     - git_dirty: BOOL
     - rpc_hash: STR
