--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -14,6 +14,7 @@ edition = "2021"
 test = ["test-strategy", "proptest"]
 
 [dependencies]
+anyhow.workspace = true
 async-graphql.workspace = true
 bcs.workspace = true
 ed25519-dalek.workspace = true
