Expand the size in the tombstone correction. (#1582)
* Introduce a test for the ScyllaDB tombstones.

* Add the Scylla tombstone triggering test, modify the Dockerfile
and the Scylla CI operations.

* Reformatting and correction of the docker build command.

--- a/.github/workflows/scylladb.yml
+++ b/.github/workflows/scylladb.yml
@@ -52,7 +52,10 @@ jobs:
         cargo build --locked --features scylladb
     - name: Setup local ScyllaDB instance
       run: |
-        docker run --name my_scylla_container -d -p 9042:9042 scylladb/scylla
+        cd docker_scylla
+        docker build -t scylla_modified .
+        docker run --name my_scylla_container -d -p 9042:9042 scylla_modified
+        cd ..
     - name: Run ScyllaDB tests
       run: |
         cargo test --locked --features scylladb -- scylla
