`linera-execution`: feature-gate metrics

--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -11,8 +11,9 @@ license = "Apache-2.0"
 edition = "2021"
 
 [features]
-default = ["wasmer"]
+default = ["wasmer", "metrics"]
 test = ["tokio/macros"]
+metrics = ["prometheus"]
 wasmer = [
     "bytes",
     "dep:wasmer",
@@ -46,7 +47,7 @@ linera-views-derive.workspace = true
 lru.workspace = true
 once_cell.workspace = true
 oneshot.workspace = true
-prometheus.workspace = true
+prometheus = { workspace = true, optional = true }
 serde.workspace = true
 serde_bytes.workspace = true
 serde_json.workspace = true
