--- a/kubernetes/linera-validator/scylla.values.yaml
+++ b/kubernetes/linera-validator/scylla.values.yaml
@@ -5,6 +5,7 @@ datacenter: validator
 racks:
   - name: rack-1
     members: 1
+    scyllaConfig: "scylla-config"
     storage:
       capacity: 2Gi
     resources:
