--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -77,6 +77,7 @@ tokio-stream.workspace = true
 toml.workspace = true
 tonic = { workspace = true, features = ["transport", "tls", "tls-roots"] }
 tonic-health.workspace = true
+tonic-web.workspace = true
 tower.workspace = true
 tower-http = { workspace = true, features = ["cors"] }
 tracing.workspace = true
