--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -7,7 +7,7 @@ members = [
     "fungible",
     "matching-engine",
     "meta-counter",
-    "social"
+    "social",
 ]
 
 [workspace.dependencies]
