--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -25,7 +25,7 @@ test = [
     "tempfile",
     "test-log",
     "test-strategy",
-    "tokio/parking_lot"
+    "tokio/parking_lot",
 ]
 rocksdb = ["linera-views/rocksdb", "linera-storage/rocksdb"]
 aws = ["linera-views/aws", "linera-storage/aws"]
