--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -19,13 +19,13 @@ wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
 rocksdb = [
     "linera-views/rocksdb",
     "linera-core/rocksdb",
-    "linera-storage/rocksdb"
+    "linera-storage/rocksdb",
 ]
 aws = ["linera-views/aws", "linera-core/aws", "linera-storage/aws"]
 scylladb = [
     "linera-views/scylladb",
     "linera-core/scylladb",
-    "linera-storage/scylladb"
+    "linera-storage/scylladb",
 ]
 kubernetes = ["dep:k8s-openapi", "dep:kube", "dep:pathdiff", "dep:fs_extra"]
 remote_net = ["dep:k8s-openapi", "dep:kube"]
