--- a/linera-storage/Cargo.toml
+++ b/linera-storage/Cargo.toml
@@ -17,7 +17,7 @@ test = [
     "tokio/test-util",
     "tokio/time",
     "linera-execution/test",
-    "linera-views/test"
+    "linera-views/test",
 ]
 wasmer = ["linera-execution/wasmer"]
 wasmtime = ["linera-execution/wasmtime"]
