Make linera-service/test depend on linera-execution/test.

--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 
 [features]
 default = ["wasmer", "rocksdb"]
-test = ["linera-views/test"]
+test = ["linera-views/test", "linera-execution/test"]
 benchmark = ["linera-base/test", "dep:fungible", "dep:port-selector"]
 wasmer = ["linera-execution/wasmer", "linera-storage/wasmer"]
 wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
