`linera-execution`: use `cfg_aliases` to disable features on unsupported targets

--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -73,5 +73,8 @@ test-log = { workspace = true, features = ["trace"] }
 tokio = { workspace = true, features = ["full", "test-util"] }
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 
+[build-dependencies]
+cfg_aliases.workspace = true
+
 [package.metadata.cargo-machete]
 ignored = ["serde_bytes"]
