--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ bincode = "1.3.3"
 bytes = "1.5.0"
 cargo_metadata = "0.18.1"
 cargo_toml = "0.15.3"
+cfg_aliases = "0.2.0"
 chrono = "0.4.31"
 clap = { version = "4", features = ["cargo", "derive", "env"] }
 clap-markdown = "0.1.3"
