--- a/.github/workflows/scylladb.yml
+++ b/.github/workflows/scylladb.yml
@@ -6,11 +6,12 @@ on:
   pull_request:
     branches:
       - "**"
-    paths-ignore:
-      - 'CONTRIBUTING.md'
-      - 'INSTALL.md'
-      - 'docker/**'
-      - 'kubernetes/**'
+    paths:
+      - '.github/workflows/scylladb.yml'
+      - 'toolchains/**'
+      - 'linera-views/**'
+      - 'linera-storage/**'
+      - 'docker_scylla/**'
   workflow_dispatch:
 
 # This allows a subsequently queued workflow run to interrupt previous runs on pull-requests
