--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,6 +117,7 @@ tonic-build = { version = "0.11", default-features = false }
 tonic-health = "0.11"
 tonic-reflection = "0.11"
 tonic-web = "0.11"
+tonic-web-wasm-client = "0.5.1"
 tokio = "1.36.0"
 tokio-stream = "0.1.14"
 tokio-test = "0.4.3"
