Removal of the new_from_guard and changes accordingly. Also removal of ./ in rust.yml

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -64,7 +64,7 @@ jobs:
         cargo build --locked
     - name: Run the storage service used for the linera-storage-service tests
       run: |
-        ./target/debug/storage_service_server memory --endpoint 127.0.0.1:8942 &
+        target/debug/storage_service_server memory --endpoint 127.0.0.1:8942 &
     - name: Run all tests using the default features
       run: |
         cargo test --locked
