Implement the shared storage for memory/rocksDb (#1525)
* Elimination of constructors taking a guard for Memory related storage.
* Implementation of a shared storage system using GRPC.
* Make the functions for testing storage (read, writes, etc.) usable from other crates.
Co-authored-by: Mathieu Baudet <1105398+ma2bd@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "linera-service",
     "linera-service-graphql-client",
     "linera-storage",
+    "linera-storage-service",
     "linera-views",
     "linera-views-derive",
     "linera-witty",
