Introduction of the namespace in the shared store.

--- a/linera-storage-service/Cargo.toml
+++ b/linera-storage-service/Cargo.toml
@@ -25,6 +25,7 @@ path = "src/server.rs"
 anyhow.workspace = true
 async-lock.workspace = true
 async-trait.workspace = true
+bcs.workspace = true
 clap.workspace = true
 linera-service.workspace = true
 linera-views.workspace = true
