--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ members = [
     "linera-views-derive",
     "linera-witty",
     "linera-witty-macros",
-    "linera-witty/test-modules",
+    "linera-witty/test-modules"
 ]
 exclude = ["examples", "scripts"]
 resolver = "2"
@@ -48,7 +48,7 @@ bytes = "1.5.0"
 cargo_metadata = "0.18.1"
 cargo_toml = "0.15.3"
 cfg_aliases = "0.2.0"
-chrono = "0.4.31"
+chrono = { version = "0.4.31", default-features = false }
 clap = { version = "4", features = ["cargo", "derive", "env"] }
 clap-markdown = "0.1.3"
 colored = "2.0.4"
@@ -67,6 +67,7 @@ fs-err = { version = "2.11.0", features = ["tokio"] }
 fs_extra = "1.3.0"
 futures = "0.3.29"
 generic-array = { version = "0.14.7", features = ["serde"] }
+getrandom = "0.2.11"
 hex = "0.4.3"
 http = "0.2.9"
 glob = "0.3.1"
@@ -81,7 +82,7 @@ prettyplease = "0.2.15"
 prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0"
-proptest = "1.3.1"
+proptest = { version = "1.3.1", default-features = false, features = ["std"] }
 prost = "0.11"
 quote = "1.0"
 rand = "0.8.5"
