--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -12,15 +12,21 @@ edition = "2021"
 
 [features]
 test = ["test-strategy", "proptest"]
+metrics = ["prometheus"]
+web = ["getrandom/js", "rand/getrandom", "rand/std", "rand/std_rng"]
 
 [dependencies]
 anyhow.workspace = true
 async-graphql.workspace = true
 bcs.workspace = true
+chrono.workspace = true
 ed25519-dalek.workspace = true
 generic-array.workspace = true
+getrandom = { workspace = true, optional = true }
 hex.workspace = true
-proptest = { workspace = true, optional = true }
+prometheus = { workspace = true, optional = true }
+proptest = { workspace = true, optional = true, features = ["alloc"] }
+rand.workspace = true
 serde.workspace = true
 serde-name.workspace = true
 serde_bytes.workspace = true
@@ -29,13 +35,14 @@ test-strategy = { workspace = true, optional = true }
 thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-chrono.workspace = true
-rand.workspace = true
-prometheus.workspace = true
+rand = { workspace = true, features = ["getrandom", "std", "std_rng"] }
 
 [dev-dependencies]
 custom_debug_derive.workspace = true
 linera-base = { path = ".", features = ["test"] }
 
+[build-dependencies]
+cfg_aliases.workspace = true
+
 [package.metadata.cargo-machete]
-ignored = ["serde_bytes"]
+ignored = ["getrandom", "serde_bytes"]
