--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ bincode = "1.3.3"
 bytes = "1.5.0"
 cargo_metadata = "0.18.1"
 cargo_toml = "0.15.3"
+cfg-if = "1.0.0"
 cfg_aliases = "0.2.0"
 chrono = { version = "0.4.31", default-features = false }
 clap = { version = "4", features = ["cargo", "derive", "env"] }
