--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,8 +87,8 @@ proptest = { version = "1.3.1", default-features = false, features = ["std"] }
 prost = "0.11"
 quote = "1.0"
 rand = { version = "0.8.5", default-features = false }
-rand_chacha = "0.3.1"
-rand_distr = "0.4.3"
+rand_chacha = { version = "0.3.1", default-features = false }
+rand_distr = { version = "0.4.3", default-features = false }
 k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
 pathdiff = "0.2.1"
 kube = "0.87.1"
