--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -28,7 +28,7 @@ test = [
     "tokio/parking_lot"
 ]
 rocksdb = ["linera-views/rocksdb", "linera-storage/rocksdb"]
-aws = ["linera-views/dynamodb", "linera-storage/aws"]
+aws = ["linera-views/dynamodb", "linera-storage/dynamodb"]
 scylladb = ["linera-views/scylladb", "linera-storage/scylladb"]
 metrics = [
     "prometheus",
