--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -11,7 +11,6 @@ license = "Apache-2.0"
 edition = "2021"
 
 [features]
-default = ["wasmer", "rocksdb"]
 wasmer = ["linera-execution/wasmer", "linera-storage/wasmer"]
 wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
 test = [
@@ -32,11 +31,19 @@ aws = ["linera-views/dynamodb", "linera-storage/dynamodb"]
 scylladb = ["linera-views/scylladb", "linera-storage/scylladb"]
 metrics = [
     "prometheus",
-    "linera-views/metrics",
-    "linera-storage/metrics",
+    "linera-base/metrics",
+    "linera-chain/metrics",
     "linera-execution/metrics",
+    "linera-storage/metrics",
+    "linera-views/metrics",
 ]
-web = ["linera-base/web"]
+web = [
+    "linera-base/web",
+    "linera-chain/web",
+    "linera-execution/web",
+    "linera-storage/web",
+    "linera-views/web",
+]
 
 [dependencies]
 anyhow = { workspace = true, optional = true }
@@ -52,9 +59,9 @@ linera-storage.workspace = true
 linera-version.workspace = true
 linera-views.workspace = true
 lru.workspace = true
-prometheus.workspace = true
+prometheus = { workspace = true, optional = true }
 proptest = { workspace = true, optional = true }
-rand.workspace = true
+rand = { workspace = true, features = ["std_rng"] }
 serde.workspace = true
 serde_json.workspace = true
 tempfile = { workspace = true, optional = true }
@@ -69,9 +76,9 @@ tracing.workspace = true
 [dev-dependencies]
 assert_matches.workspace = true
 counter.workspace = true
-criterion = { workspace = true, features = ["async_tokio"] }
+criterion.workspace = true
 fungible.workspace = true
-linera-core = { path = ".", default-features = false, features = ["test"] }
+linera-core = { path = ".", features = ["test"] }
 linera-views.workspace = true
 meta-counter.workspace = true
 serde_json.workspace = true
@@ -79,8 +86,11 @@ social.workspace = true
 test-case.workspace = true
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
+criterion = { workspace = true, default-features = true }
+
 [package.metadata.cargo-machete]
-ignored = ["proptest", "async-graphql"]
+ignored = ["async-graphql", "proptest"]
 
 [[bench]]
 name = "client_benchmarks"
