--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,7 @@ prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0"
 proptest = { version = "1.3.1", default-features = false }
-prost = "0.11"
+prost = "0.12.3"
 quote = "1.0"
 rand = { version = "0.8.5", default-features = false }
 rand_chacha = { version = "0.3.1", default-features = false }
@@ -112,9 +112,9 @@ test-case = "3.2.1"
 test-log = { version = "0.2.13", default-features = false, features = ["trace"] }
 test-strategy = "0.2.1"
 thiserror = "1.0.50"
-tonic = { version = "0.8", default-features = false }
-tonic-build = "0.8"
-tonic-health = "0.8"
+tonic = { version = "0.10.2", default-features = false }
+tonic-build = { version = "0.10.2", default-features = false }
+tonic-health = "0.10.2"
 tokio = "1.33.0"
 tokio-stream = "0.1.14"
 tokio-test = "0.4.3"
