--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -87,7 +87,7 @@ test-case.workspace = true
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-criterion = { workspace = true, default-features = true }
+criterion = { workspace = true, default-features = true, features = ["async_tokio"] }
 
 [package.metadata.cargo-machete]
 ignored = ["async-graphql", "proptest"]
